--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@babel/standalone": "^7.25.6",
+    "lodash-es": "^4.17.21",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "prismjs": "^1.29.0",
     "rehype-prism": "^2.3.2",
     "rehype-raw": "^7.0.0",
     "rehype-react": "^8.0.0",
@@ -24,26 +24,28 @@
     "remark-rehype": "^11.1.0"
   },
   "devDependencies": {
-    "prism-themes": "^1.9.0",
+    "@babel/standalone": "^7.25.6",
+    "@types/lodash-es": "^4.17.12",
+    "@babel/helper-plugin-utils": "^7.24.8",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
-    "unist-util-visit": "^5.0.0",
     "@types/babel__helper-plugin-utils": "^7.10.3",
+    "@types/babel__standalone": "^7.1.7",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "esbuild": "^0.23.1",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
+    "prism-themes": "^1.9.0",
     "sass": "^1.78.0",
-    "@types/babel__standalone": "^7.1.7",
-    "@types/node": "^22.5.5",
-    "esbuild": "^0.23.1",
-    "@babel/helper-plugin-utils": "^7.24.8"
+    "typescript": "^5.2.2",
+    "unist-util-visit": "^5.0.0",
+    "vite": "^5.0.0"
   }
 }
