--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "lodash-es": "^4.17.21",
+    "path-browserify": "^1.0.1",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,15 +25,16 @@
     "remark-rehype": "^11.1.0"
   },
   "devDependencies": {
-    "@babel/standalone": "^7.25.6",
-    "@types/lodash-es": "^4.17.12",
     "@babel/helper-plugin-utils": "^7.24.8",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@babel/standalone": "^7.25.6",
     "@types/babel__helper-plugin-utils": "^7.10.3",
     "@types/babel__standalone": "^7.1.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.5.5",
+    "@types/path-browserify": "^1.0.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
