--- a/package.json
+++ b/package.json
@@ -50,5 +50,13 @@
     "typescript": "^5.2.2",
     "unist-util-visit": "^5.0.0",
     "vite": "^5.0.0"
-  }
+  },
+  "keywords": [
+    "remark",
+    "markdown",
+    "rehype",
+    "react",
+    "component",
+    "vite"
+  ]
 }
